--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <form>
             <select class="js-select selector">
                 <option value="empty">Seleccione la raza con que vas a jugar</option>
-                <option value="Raza1"> Pelosos</option>
-                <option value="Raza2">Sureños</option>
-                <option value="Raza3">Enanos</option>
-                <option value="Raza4">Númenóreanos</option>
-                <option value="Raza5">Elfos</option>
+                <option value="1"> Pelosos</option>
+                <option value="2">Sureños Buenos</option>
+                <option value="3">Enanos</option>
+                <option value="4">Númenóreanos</option>
+                <option value="5">Elfos</option>
             </select>
             <button class="js-btn button">Batalla</button>
         </form>
